# restos-ledger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: demo.md
include/restos/: kv.hpp  log.hpp  net.hpp  raft.hpp
scripts/: cluster.ps1  cluster.sh
src/: cli_main.cpp  kv.cpp  log.cpp  net.cpp  node_main.cpp  raft.cpp
tests/: CMakeLists.txt  sim.hpp  test_raft.cpp
